force-app/main/default/objects/BLN_VehicleDamage__c/BLN_VehicleDamage__c.object-meta.xml
<CustomObject>
    <description>FOUK-539 This is Vehicle Damage object</description>
    <label>Vehicle Damage</label>
    <nameField>
        <displayFormat>VD-{00000000}</displayFormat>
        <label>Vehicle Damage Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vehicle Damages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>