force-app/main/default/objects/BLN_VehicleDamage__c/fields/BLN_AssessmentStatus__c.field-meta.xml
<CustomField>
    <fullName>BLN_AssessmentStatus__c</fullName>
    <description>FOUK-3956: Ths field is created to store Assessment status value in Vehicle damage record.</description>
    <label>Assessment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Pending Image upload</fullName>
            </value>
            <value>
                <fullName>Sent for Tech review</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>