force-app/main/default/objects/BLN_VehicleDamage__c/fields/BLN_BOMID__c.field-meta.xml
<CustomField>
    <fullName>BLN_BOMID__c</fullName>
    <description>FOUK-3956: This field is created to store BOM ID value in vehicle damage record.</description>
    <label>BOM ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>