force-app/main/default/objects/BLN_VehicleDamage__c/fields/BLN_Case__c.field-meta.xml
<CustomField>
    <fullName>BLN_Case__c</fullName>
    <description>FOUK-436 This field is used to store case details</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Vehicle Damages</relationshipLabel>
    <relationshipName>Vehicle_Damages</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>