force-app/main/default/objects/BLN_VehicleDamage__c/fields/BLN_GlassHoleType__c.field-meta.xml
<CustomField>
    <fullName>BLN_GlassHoleType__c</fullName>
    <description>FOUK-3956: This field is created to store Glass/Hole Type value in Vehicle Damage record.</description>
    <label>Glass/Hole Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BK</fullName>
                <label>Back Window</label>
            </value>
            <value>
                <fullName>DR</fullName>
                <label>Door</label>
            </value>
            <value>
                <fullName>PT</fullName>
                <label>Partition</label>
            </value>
            <value>
                <fullName>RF</fullName>
                <label>Roof</label>
            </value>
            <value>
                <fullName>QT</fullName>
                <label>Quarter</label>
            </value>
            <value>
                <fullName>SI</fullName>
                <label>Side</label>
            </value>
            <value>
                <fullName>VN</fullName>
                <label>Vent</label>
            </value>
            <value>
                <fullName>WS</fullName>
                <label>Windshield</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>