force-app/main/default/objects/BLN_VehicleDamage__c/fields/BLN_NoOfChips__c.field-meta.xml
<CustomField>
    <fullName>BLN_NoOfChips__c</fullName>
    <description>FOUK-5209</description>
    <label>No Of Chips</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>