force-app/main/default/objects/BLN_VehicleDamage__c/fields/BLN_OutcomeType__c.field-meta.xml
<CustomField>
    <fullName>BLN_OutcomeType__c</fullName>
    <description>FOUK-3956: This field is created to store outcome type in Vehicla damage record.</description>
    <label>Outcome Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Repair</fullName>
            </value>
            <value>
                <fullName>Replacement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>