force-app/main/default/objects/BLN_VehicleDamage__c/fields/BLN_ProductId__c.field-meta.xml
<CustomField>
    <fullName>BLN_ProductId__c</fullName>
    <description>FOUK-7710, this field is created to store product id</description>
    <label>Product Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>