force-app/main/default/objects/BLN_VehicleDamage__c/fields/BLN_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>BLN_Vehicle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>FOUK-539 This field is used to store the associated vehicle.</description>
    <label>Vehicle</label>
    <referenceTo>BLN_Vehicle__c</referenceTo>
    <relationshipLabel>Vehicle Damages</relationshipLabel>
    <relationshipName>Vehicle_Damages</relationshipName>
    <type>Lookup</type>
</CustomField>