force-app/main/default/objects/BLN_VehicleDamage__c/fields/BLN_WorkType__c.field-meta.xml
<CustomField>
    <fullName>BLN_WorkType__c</fullName>
    <description>FOUK-527 This field is used to store the results of damage assessment.</description>
    <label>Work Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Replacement &amp; Recalibration</fullName>
            </value>
            <value>
                <fullName>Replacement</fullName>
            </value>
            <value>
                <fullName>Recalibration</fullName>
            </value>
            <value>
                <fullName>Side &amp; Rear</fullName>
            </value>
            <value>
                <fullName>Repair</fullName>
            </value>
            <value>
                <fullName>No Work Required</fullName>
            </value>
            <value>
                <fullName>Sunroof</fullName>
                <isActive>false</isActive>
                <label>Sunroof</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>