force-app/main/default/objects/BLN_VehicleDamage__c/fields/BLN_WorkTypeCode__c.field-meta.xml
<CustomField>
    <fullName>BLN_WorkTypeCode__c</fullName>
    <description>FOUK-527 This field is used to store outcome type code which will be used to determine the case service type.</description>
    <formula>IF(ISPICKVAL(BLN_WorkType__c, &apos;Side &amp; Rear&apos;),6,
IF(ISPICKVAL(BLN_WorkType__c, &apos;Replacement&apos;),5,
IF(ISPICKVAL(BLN_WorkType__c, &apos;Replacement &amp; Recalibration&apos;),4,
IF(ISPICKVAL(BLN_WorkType__c, &apos;Recalibration&apos;),3,
IF(ISPICKVAL(BLN_WorkType__c, &apos;Repair&apos;),2,
IF(ISPICKVAL(BLN_WorkType__c, &apos;No Work Required&apos;),1,
0))))))</formula>
    <label>Work Type Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>